fix(material/slide-toggle): no outline when selected in high contrast mode (#28979)
Fixes that the M3 slide toggle didn't have an outline when it's selected in high contrast mode.

--- a/src/material/core/tokens/m3/mat/_switch.scss
+++ b/src/material/core/tokens/m3/mat/_switch.scss
@@ -35,7 +35,8 @@ $prefix: (mat, switch);
     hidden-track-transition: token-utils.hardcode(opacity 75ms, $exclude-hardcoded),
     track-outline-width: token-utils.hardcode(2px, $exclude-hardcoded),
     track-outline-color:  map.get($systems, md-sys-color, outline),
-    selected-track-outline-width: token-utils.hardcode(0, $exclude-hardcoded),
+    selected-track-outline-width: token-utils.hardcode(2px, $exclude-hardcoded),
+    selected-track-outline-color: token-utils.hardcode(transparent, $exclude-hardcoded),
     disabled-unselected-track-outline-width: token-utils.hardcode(2px, $exclude-hardcoded),
     disabled-unselected-track-outline-color: map.get($systems, md-sys-color, on-surface),
   );
